--- a/docroot/themes/custom/ample/scss/sections/_main-content.scss
+++ b/docroot/themes/custom/ample/scss/sections/_main-content.scss
@@ -9,6 +9,10 @@
     margin-bottom: 0;
   }
 
+  .logged & {
+    padding-left: 80px;
+  }
+
   &:before {
     background-color: $white-dark;
     box-shadow: inset 0 0 8px rgba($black, .11);
